# wasm-spreadsheet

./: .gitignore  BUILD.bazel  Cargo.toml  README.md  WORKSPACE  notes.md  package.json  x.py
.github/workflows/: test.yml
cargo/: BUILD.bazel  Cargo.toml  crates.bzl
cargo/remote/: BUILD.bitmaps-2.1.0.bazel  BUILD.bumpalo-3.9.1.bazel  BUILD.console_error_panic_hook-0.1.7.bazel  BUILD.imbl-1.0.1.bazel  BUILD.js-sys-0.3.56.bazel  BUILD.memchr-2.4.1.bazel  BUILD.rand_core-0.6.3.bazel  BUILD.rand_xoshiro-0.6.0.bazel  BUILD.signals2-0.3.2.bazel  BUILD.sized-chunks-0.6.5.bazel  BUILD.wasm-bindgen-0.2.79.bazel
scripts/: cargo_update.sh
src/engine/: BUILD  console_log.rs  dep_graph.rs  error.rs  interpreter.rs  lib.rs  main.rs  parser.rs
src/engine/interpreter/: builtins.rs  compiler.rs  env.rs  evaluator.rs  mod.rs  model.rs
src/engine/sheet/: core_model.rs  mod.rs  sheet.rs  sheet_range.rs
src/hello_rust/: BUILD
src/wasm/: BUILD  hello_world_wasm_test.js
src/web/: BUILD  bindgen-plugin.js  esbuild.config.mjs  index.css  index.html  index.tsx  main.tsx  tsconfig.json  txt-array-plugin.js
src/web/components/: FormulaEditor.tsx  Main.tsx  Sheet.tsx  SheetCell.tsx
src/web/lib/: Sheet.ts  SheetModel.ts  util.ts
